# DINOv2-3D-Med

./: .gitignore  LICENSE  README.md  __lighter__.py  pyproject.toml  requirements.txt
callbacks/: README.md  __init__.py  effective_rank_logger.py  entropy_logger.py  gram_matrix_logger.py
configs/: dinotxt_stage.yaml  predict.yaml  train.yaml  train_primus.yaml
configs/datasets/: amos.yaml  idc_dump.yaml
configs/experiments/: exp00_baseline.yaml  exp01_lower_lr.yaml  exp02_very_low_lr.yaml  exp03_fast_center.yaml  exp04_small_proj.yaml  exp05_hard_clip.yaml  exp06_longer_freeze.yaml  exp07_stable_combo.yaml  exp08_warm_teacher.yaml
configs/models/: primus.yaml  vit.yaml
losses/: __init__.py  dino.py  dinov3.py  ibot_patch_3d.py  image_text_alignment.py
models/: __init__.py  dynamic_utils.py  lightning_module.py  masked_vit_wrapper.py  meta_arch.py  model.py  multimodal_meta_arch.py  primus.py  rope.py
models/backbones/: eva.py  primus.py  text_encoder.py  vision_enc_wrapper.py
scripts/: run.py  run_collapse_expts.sh  run_expts.sh  run_nnunet_eval.sh  train.py
scripts/eval/: common.sh  extract_features_radchestct.py  linear_probe_radchestct.py  liver_base_eva_mae.sh  liver_base_eva_mae_ep150.sh  liver_base_mae_ep150.sh  liver_baseline.sh  liver_dinov2.sh  liver_simclr_ep150.sh  liver_simclr_intrasample.sh  run_all.sh  (+10 more)
tests/: __init__.py  fixtures.py  test_gram_matrix_callback.py  test_run.py
training/: __init__.py  dinotxt_lightning_module.py  dinov2_lightning_module.py
transforms/: blockmask.py  dinov2_aug.py
utils/: imports.py  safe_dataset.py
(+1 files in other folders)
