[project]
name = "dinov2-3d"
version = "0.1.0"
description = "3D DINOv2 self-supervised learning for medical imaging"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "lighter",
    "dynamic-network-architectures",
    "einops>=0.8.0",
    "huggingface-hub>=0.30.0",
    "lightly>=1.5.0",
    "monai>=1.4.0",
    "nibabel>=5.0.0",
    "numpy>=1.26.0",
    "pytorch-lightning>=2.5.0",
    "timm>=1.0.0",
    "torch>=2.4.0",
    "torchmetrics>=1.0.0",
    "torchvision>=0.19.0",
    "wandb>=0.18.0",
    "transformers>=4.40.0",
]

[tool.uv.sources]
dynamic-network-architectures = { git = "https://github.com/MIC-DKFZ/dynamic-network-architectures.git", rev = "6d9f47ebc53dfbc679c6c68a93f4f92d34cb3766" }
